Inclusão SQLServer dentro do projeto

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-08d5e0fe-a139-4f86-aef7-03e8a47c2d4b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=LAPTOP-A42P9CNO;Database=SalesWebMvcContext-08d5e0fe-a139-4f86-aef7-03e8a47c2d4b;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
